--- a/css/foundation.css
+++ b/css/foundation.css
@@ -2655,18 +2655,19 @@ ul.pagination {
     clear: both; }
   .accordion dd {
     display: block;
-    margin-bottom: 0 !important; }
+	margin-bottom: 0 !important; }
     .accordion dd.active > a {
-      background: #e8e8e8; }
+      background: white; }
     .accordion dd > a {
-      background: #efefef;
-      color: #222222;
+      background: white;
+      color: #A7120F;
       padding: 1rem;
       display: block;
       font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
       font-size: 1rem; }
       .accordion dd > a:hover {
-        background: #e3e3e3; }
+        background: #A7120F; 
+		color:white;}
   .accordion .content {
     display: none;
     padding: 0.9375rem; }
